--- a/04company/index.html
+++ b/04company/index.html
@@ -276,7 +276,109 @@
    <div class="noticeWrap">
        <h3>공지사항</h3>
    </div>
-   
+   <div class="article">
+       <ul>
+           <li><a href="#">
+               <h2>K4리그 일정 변경 관련 공지사항</h2>
+               <p>코로나19확진 등으로 인해 경기 일정이 변경되었습니다</p>
+               <table>
+                   <tbody>
+                       <tr>
+                           <td><a href="#">23R</a></td>
+                           <td><a href="#">09.11(토)</a></td>
+                           <td><a href="#">VS 충주시민</a></td>
+                           <td><a href="#">14:00</a></td>
+                           <td><a href="#">충주종합</a></td>
+                       </tr>
+                       <tr>
+                           <td><a href="#">24R</a></td>
+                           <td><a href="#">09.19(일)</a></td>
+                           <td><a href="#">VS 포천시민</a></td>
+                           <td><a href="#">15:00</a></td>
+                           <td><a href="#">원주종합</a></td>
+                       </tr>
+                       <tr>
+                           <td><a href="#">20R</a></td>
+                           <td><a href="#">09.22(수)</a></td>
+                           <td><a href="#">VS 인천남동</a></td>
+                           <td><a href="#">15:00</a></td>
+                           <td><a href="#">남동근린체육</a></td>
+                       </tr>
+                       <tr>
+                           <td><a href="#">25R</a></td>
+                           <td><a href="#">09.25(토)</a></td>
+                           <td><a href="#">VS 진주시민</a></td>
+                           <td><a href="#">15:00</a></td>
+                           <td><a href="#">원주종합</a></td>
+                       </tr>
+                       <tr>
+                           <td><a href="#">26R</a></td>
+                           <td><a href="#">10.02(토)</a></td>
+                           <td><a href="#">VS 당진시민</a></td>
+                           <td><a href="#">15:00</a></td>
+                           <td><a href="#">당진종합</a></td>
+                       </tr>
+                       <tr>
+                           <td><a href="#">22R</a></td>
+                           <td><a href="#">10.09(토)</a></td>
+                           <td><a href="#">VS 시흥시민</a></td>
+                           <td><a href="#">15:00</a></td>
+                           <td><a href="#">원주종합</a></td>
+                       </tr>
+                       <tr>
+                           <td><a href="#">27R</a></td>
+                           <td><a href="#">10.16(토)</a></td>
+                           <td><a href="#">VS 고양시민</a></td>
+                           <td><a href="#">15:00</a></td>
+                           <td><a href="#">동해웰빙</a></td>
+                       </tr>
+                       <tr>
+                           <td><a href="#">21R</a></td>
+                           <td><a href="#">10.20(수)</a></td>
+                           <td><a href="#">VS 전주시민</a></td>
+                           <td><a href="#">14:00</a></td>
+                           <td><a href="#">전주종합</a></td>
+                       </tr>
+                       <tr>
+                           <td><a href="#">28R</a></td>
+                           <td><a href="#">10.23(토)</a></td>
+                           <td><a href="#">VS 춘천시민</a></td>
+                           <td><a href="#">15:00</a></td>
+                           <td><a href="#">동해웰빙</a></td>
+                       </tr>
+                       <tr>
+                           <td><a href="#">29R</a></td>
+                           <td><a href="#">10.31(일)</a></td>
+                           <td><a href="#">양평FC</a></td>
+                           <td><a href="#">15:00</a></td>
+                           <td><a href="#">원주종합</a></td>
+                       </tr>
+                       <tr>
+                           <td><a href="#">30R</a></td>
+                           <td><a href="#">11.06(토)</a></td>
+                           <td><a href="#">VS 평창UTD</a></td>
+                           <td><a href="#">14:00</a></td>
+                           <td><a href="#">원주종합</a></td>
+                       </tr>
+                   </tbody>
+               </table>
+           </a></li>
+           <li><a href="#">
+               <h4>강원FC에서 알려드립니다</h4>
+               <h2>코로나19 전수조사 관련 안내</h2>
+               <p>강원FC는 자가격리 해제 전 시행한<br>선수단 코로나19 전수조사에서<br>
+            선수, 코칭지원스태프, 관련 직원 모두 음성 판정을 받았습니다 <br><br>
+        선수단은 오늘 9/3(금) 12시 격리 해제 후 <br>오후에 정상 훈련을 진행합니다<br>
+    구단은 앞으로 클럽하우스 및 개인 방역 강화에 더욱 힘쓰겠습니다</p><br><br>
+    <img src="images/vs2.png" alt="">
+           </a></li>
+           <li><a href="#">
+               <h2>PLAYER RANKING</h2>
+               <h2>선수별 랭킹</h2>
+           </a></li>
+           <li><a href="#"></a></li>
+       </ul>
+   </div>
    <footer id="footer"></footer>
 </body>
 </html>
