--- a/04company/index.html
+++ b/04company/index.html
@@ -369,14 +369,54 @@
                <p>강원FC는 자가격리 해제 전 시행한<br>선수단 코로나19 전수조사에서<br>
             선수, 코칭지원스태프, 관련 직원 모두 음성 판정을 받았습니다 <br><br>
         선수단은 오늘 9/3(금) 12시 격리 해제 후 <br>오후에 정상 훈련을 진행합니다<br>
-    구단은 앞으로 클럽하우스 및 개인 방역 강화에 더욱 힘쓰겠습니다</p><br><br>
+    구단은 앞으로 클럽하우스 및 개인 방역 강화에 더욱 힘쓰겠습니다</p>
     <img src="images/vs2.png" alt="">
            </a></li>
            <li><a href="#">
                <h2>PLAYER RANKING</h2>
                <h2>선수별 랭킹</h2>
+               <ul>
+                   <li><img src="images/player.png" alt=""></li>
+                   <li>5 GOAL 득점1위 고무열</li>
+               </ul>
+               <ul>
+                <li><img src="images/player.png" alt=""></li>
+                <li>3 ASSIST 도움1위 고무열</li>
+               </ul>
            </a></li>
-           <li><a href="#"></a></li>
+           <li><a href="#">
+            <h2>GANGWON FC NOTICE</h2>
+            <h2>공지사항</h2>
+            <table>
+                <tbody>
+                    <tr>
+                        <td>
+                            <div class="txt">강원FC 엠블럼 공모전 안내</div>
+                            <div class="num">2021.08.30</div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="txt">코로나19 확진에 따른 경기 일정 관련 안내</div>
+                            <div class="num">2021.08.23</div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="txt">강원FC 선수단 코로나19 확진 관련 공지...</div>
+                            <div class="num">2021.08.20</div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="txt">제1회 강원FC배 동호인 축구대회 안내</div>
+                            <div class="num">2021.06.17</div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+           </a>
+        </li>
        </ul>
    </div>
    <footer id="footer"></footer>
