--- a/04company/index.html
+++ b/04company/index.html
@@ -372,18 +372,18 @@
     구단은 앞으로 클럽하우스 및 개인 방역 강화에 더욱 힘쓰겠습니다</p>
     <img src="images/vs2.png" alt="">
            </a></li>
-           <li><a href="#">
+           <li>
+             <a href="#">
                <h2>PLAYER RANKING</h2>
-               <h2>선수별 랭킹</h2>
-               <ul>
-                   <li><img src="images/player.png" alt=""></li>
-                   <li>5 GOAL 득점1위 고무열</li>
-               </ul>
+               <h3>선수별 랭킹</h3>
                <ul>
                 <li><img src="images/player.png" alt=""></li>
-                <li>3 ASSIST 도움1위 고무열</li>
+                <li>5 GOAL 득점1위 고무열</li>
+                <li><img src="images/player.png" alt=""></li>
+                <li>3 ASSIST 도움1위 고무열</li>  
                </ul>
-           </a></li>
+           </a>
+        </li>
            <li><a href="#">
             <h2>GANGWON FC NOTICE</h2>
             <h2>공지사항</h2>
