--- a/04company/index.html
+++ b/04company/index.html
@@ -332,34 +332,6 @@
                            <td><a href="#">15:00</a></td>
                            <td><a href="#">동해웰빙</a></td>
                        </tr>
-                       <tr>
-                           <td><a href="#">21R</a></td>
-                           <td><a href="#">10.20(수)</a></td>
-                           <td><a href="#">VS 전주시민</a></td>
-                           <td><a href="#">14:00</a></td>
-                           <td><a href="#">전주종합</a></td>
-                       </tr>
-                       <tr>
-                           <td><a href="#">28R</a></td>
-                           <td><a href="#">10.23(토)</a></td>
-                           <td><a href="#">VS 춘천시민</a></td>
-                           <td><a href="#">15:00</a></td>
-                           <td><a href="#">동해웰빙</a></td>
-                       </tr>
-                       <tr>
-                           <td><a href="#">29R</a></td>
-                           <td><a href="#">10.31(일)</a></td>
-                           <td><a href="#">양평FC</a></td>
-                           <td><a href="#">15:00</a></td>
-                           <td><a href="#">원주종합</a></td>
-                       </tr>
-                       <tr>
-                           <td><a href="#">30R</a></td>
-                           <td><a href="#">11.06(토)</a></td>
-                           <td><a href="#">VS 평창UTD</a></td>
-                           <td><a href="#">14:00</a></td>
-                           <td><a href="#">원주종합</a></td>
-                       </tr>
                    </tbody>
                </table>
            </a></li>
@@ -419,6 +391,26 @@
         </li>
        </ul>
    </div>
-   <footer id="footer"></footer>
+   <footer id="footer">
+       <div class="topMenu">
+           <ul class="footmenu clearfix">
+               <li><a href="#">개인정보처리방침</a></li>
+               <li><a href="#">이용약관</a></li>
+               <li><a href="#">사이트맵</a></li>
+           </ul>
+       </div>
+       <div class="container">
+           <ul>
+               <li><img src="images/footerlogo.png" alt=""></li>
+               <li>
+                   <p>춘천 사무국:강원 춘천시 스포츠타운길 124 1층 강원FC사무국 TEL 033-254-2854 FAX 033-252-2854 <br>
+                    강릉 사무국: 강원 강릉시 남부로 222 강남축구공원 내 강원FC사무국 TEL 033-655-6652/033-655-6653 FAX 033-655-6660 <br>
+                    대표이사:이영표 사업자등록번호:221-81-31526 통신판매신고:2013-강원강릉-0026 사업자정보확인 메일주소:gangwonfc@gangwon-fc.com 호스팅사업자:(주)덕스포츠<br>
+                    COPYRIGHT 2020 ⓒGANGWON FC ALL RIGHTS RESERVED.
+                   </p>
+                </li>
+           </ul>
+       </div>
+   </footer>
 </body>
 </html>
