--- a/04company/index.html
+++ b/04company/index.html
@@ -17,7 +17,6 @@
 <body>
    <header id="header">
        <div class="headerWrap">
-           <h1><a href="#"><img src="" alt=""></a></h1>
            <nav class="gnb">
                <ul class="mainMenu clearfix">
                    <li class="mainLi"><a href="#">강원FC
@@ -350,9 +349,9 @@
                <h3>선수별 랭킹</h3>
                <ul>
                 <li><img src="images/player.png" alt=""></li>
-                <li>5 GOAL 득점1위 고무열</li>
+                <li><p> 5 GOAL 득점1위 고무열</p></li>
                 <li><img src="images/player.png" alt=""></li>
-                <li>3 ASSIST 도움1위 고무열</li>  
+                <li><p>3 ASSIST 도움1위 고무열</p></li>  
                </ul>
            </a>
         </li>
