--- a/04company/index.html
+++ b/04company/index.html
@@ -172,7 +172,7 @@
         
         </div>
    </header> 
-   <div class="sponser">
+   <!-- <div class="sponser">
     <ul class="sponserWrap">
         <li>
             <img src="images/slider1.png" alt="">
@@ -410,6 +410,6 @@
                 </li>
            </ul>
        </div>
-   </footer>
+   </footer> -->
 </body>
 </html>
