--- a/04company/index.html
+++ b/04company/index.html
@@ -19,7 +19,7 @@
        <div class="headerWrap">
            <nav class="gnb">
                <ul class="mainMenu clearfix">
-                   <li class="mainLi"><a href="#">강원FC
+                   <li class="mainLi"><a href="#">강원FC</a>
                        <ul class="subMenu">
                            <li class="subLi"><a href="#">구단소개</a></li>
                            <li class="subLi"><a href="#">유니폼</a></li>
@@ -28,30 +28,30 @@
                            <li class="subLi"><a href="#">서포터즈</a></li>
                            <li class="subLi"><a href="#">주주확인</a></li>
                        </ul>
-                   </a></li>
-                   <li class="mainLi"><a href="#">구단소식
+                   </li>
+                   <li class="mainLi"><a href="#">구단소식</a>
                        <ul class="subMenu">
                            <li class="subLi"><a href="#">공지사항</a></li>
                            <li class="subLi"><a href="#">구단뉴스</a></li>
                            <li class="subLi"><a href="#">구단영상</a></li>
                            <li class="subLi"><a href="#">구단사진</a></li>
                        </ul>
-                   </a></li>
-                   <li class="mainLi"><a href="#">선수단
+                   </li>
+                   <li class="mainLi"><a href="#">선수단</a>
                        <ul class="subMenu">
                            <li class="subLi"><a href="#">선수</a></li>
                            <li class="subLi"><a href="#">코칭스태프</a></li>
                            <li class="subLi"><a href="#">U-18</a></li>
                            <li class="subLi"><a href="#">U-15</a></li>
                        </ul>
-                   </a></li>
-                   <li class="mainLi"><a href="#">스폰서
+                   </li>
+                   <li class="mainLi"><a href="#">스폰서</a>
                        <ul class="subMenu">
                            <li class="subLi"><a href="#">공식스폰서</a></li>
                            <li class="subLi"><a href="#">후원의 집</a></li>
                        </ul>
-                   </a></li>
-                   <li class="mainLi"><a href="#">경기/티켓
+                   </li>
+                   <li class="mainLi"><a href="#">경기/티켓</a>
                        <ul class="subMenu">
                            <li class="subLi"><a href="#">경기일정</a></li>
                            <li class="subLi"><a href="#">구단순위</a></li>
@@ -59,8 +59,8 @@
                            <li class="subLi"><a href="#">연간회원권&티켓북</a></li>
                            <li class="subLi"><a href="#">버스신청</a></li>
                        </ul>
-                   </a></li>
-                   <li class="mainLi"><a href="#">사회공헌
+                   </li>
+                   <li class="mainLi"><a href="#">사회공헌</a>
                        <ul class="subMenu">
                            <li class="subLi"><a href="#">강웅이와 함께 으라차차</a></li>
                            <li class="subLi"><a href="#">축구클리닉</a></li>
@@ -68,7 +68,7 @@
                            <li class="subLi"><a href="#">진로교육</a></li>
                            <li class="subLi"><a href="#">활동신청</a></li>
                        </ul>
-                   </a></li>
+                   </li>
                </ul>
            </nav>
            <div class="toggle">
@@ -172,7 +172,7 @@
         
         </div>
    </header> 
-   <!-- <div class="sponser">
+   <div class="sponser">
     <ul class="sponserWrap">
         <li>
             <img src="images/slider1.png" alt="">
@@ -189,6 +189,7 @@
      </ul>
    </div>
 
+   <!-- 
    <div class="fcSpon">
        <h2>GANGWON FC SPONSOR</h2>
        <h4>강원FC스폰서를 소개합니다.</h4>
