--- a/04company/index.html
+++ b/04company/index.html
@@ -188,229 +188,231 @@
         </li>
      </ul>
    </div>
-
-   <!-- 
    <div class="fcSpon">
-       <h2>GANGWON FC SPONSOR</h2>
-       <h4>강원FC스폰서를 소개합니다.</h4>
-       <div class="sponImg clearfix">
-           <img src="images/gangwon.png" alt="">
-           <img src="images/chun.png" alt="">
+    <h2>GANGWON FC SPONSOR</h2>
+    <h4>강원FC스폰서를 소개합니다.</h4>
+    <div class="sponImg clearfix">
+        <img src="images/gangwon.png" alt="">
+        <img src="images/chun.png" alt="">
 
-           <img src="images/gangneun.png" alt="">
-           <img src="images/resort.png" alt="">
-           <img src="images/yanggu.png" alt="">
-       </div>
-   </div>
-   <div class="feedContain">
-       <div class="feeds">
-           <h3>GANGWON FC FEEDS</h3><br>
-           <p>강원FC 소식을 확인하세요!</p>
-           <ul>
-               <li>
-                   <img src="images/a 1.png" alt="">
-                   <span>전체</span>
-            </li>
-               <li>
-                   <img src="images/bd 1.png" alt="">
-                   <span>공지사항</span>
-                </li>
-               <li>
-                   <img src="images/b 1.png" alt="">
-                   <span>뉴스</span>
-                </li>
-               <li>
-                   <img src="images/g 1.png" alt="">
-                   <span>구단사진</span>
-                </li>
-               <li>
-                   <img src="images/facebook 2.png" alt="">
-                   <span>페이스북</span>
-                </li>
-               <li>
-                   <img src="images/youtube 8.png" alt="">
-                   <span>인스타그램</span>
-                </li>
-           </ul>
-       </div>
-       <div class="insta">
-           <ul>
-               <li>
-                   <a href="#">
-                       <img src="images/Rectangle 23.png" alt="">
-                       <p>.이렇게 훈련이 재미있던 거였나?<br>당연함😝 매번 오던 곳도 설레게 만든... <br>#인스타그램</p>
-            </a>
-        </li>
-               <li>
-                   <a href="#">
-                       <img src="images/Rectangle 24.png" alt="">
-                       <p>런닝하다 붙잡힌 골키퍼 완전체 ♀ #강원FC #골키퍼즈 #이범수 #권재범... <br>#인스타그램</p>
-                    </a></li>
-               <li>
-                   <a href="#">
-                       <img src="images/Rectangle 26.png" alt="">
-                       <p>.9월 7일 푸른 하늘의 날은<br>우리나라의 제안으로 지정된 최초의 UN... <br>#인스타그램</p>
-                    </a>
-                </li>
-               <li>
-                   <a href="#">
-                       <img src="images/Rectangle 27.png" alt="">
-                       <p>#HBD_강원 오늘은 고무열 선수의 생일입니다🎉 (무)열의 날 (열)렬히... <br>#인스타그램</p>
-                    </a>
-                </li>
-               <li>
-                   <a href="#">
-                       <img src="images/Rectangle 28.png" alt="">
-                       <p>.일동후디스 하이뮨과 함께하는 랜선 팬사인회✍🎊9/8(수) 김동현... <br>#인스타그램</p>
-                    </a>
-                    </li>
-               <li>
-                   <a href="#">
-                       <img src="images/Rectangle 30.png" alt="">
-                       <p>.📢 #강원FC K리그 주니어 경기 결과 <br>🐣강원FC U15 3:1 FC... <br>#인스타그램</p>
-                    </a>
-                </li>
-           </ul>
-       </div>
-   </div>
-   <div class="noticeWrap">
-       <h3>공지사항</h3>
-   </div>
-   <div class="article">
-       <ul>
-           <li><a href="#">
-               <h2>K4리그 일정 변경 관련 공지사항</h2>
-               <p>코로나19확진 등으로 인해 경기 일정이 변경되었습니다</p>
-               <table>
-                   <tbody>
-                       <tr>
-                           <td><a href="#">23R</a></td>
-                           <td><a href="#">09.11(토)</a></td>
-                           <td><a href="#">VS 충주시민</a></td>
-                           <td><a href="#">14:00</a></td>
-                           <td><a href="#">충주종합</a></td>
-                       </tr>
-                       <tr>
-                           <td><a href="#">24R</a></td>
-                           <td><a href="#">09.19(일)</a></td>
-                           <td><a href="#">VS 포천시민</a></td>
-                           <td><a href="#">15:00</a></td>
-                           <td><a href="#">원주종합</a></td>
-                       </tr>
-                       <tr>
-                           <td><a href="#">20R</a></td>
-                           <td><a href="#">09.22(수)</a></td>
-                           <td><a href="#">VS 인천남동</a></td>
-                           <td><a href="#">15:00</a></td>
-                           <td><a href="#">남동근린체육</a></td>
-                       </tr>
-                       <tr>
-                           <td><a href="#">25R</a></td>
-                           <td><a href="#">09.25(토)</a></td>
-                           <td><a href="#">VS 진주시민</a></td>
-                           <td><a href="#">15:00</a></td>
-                           <td><a href="#">원주종합</a></td>
-                       </tr>
-                       <tr>
-                           <td><a href="#">26R</a></td>
-                           <td><a href="#">10.02(토)</a></td>
-                           <td><a href="#">VS 당진시민</a></td>
-                           <td><a href="#">15:00</a></td>
-                           <td><a href="#">당진종합</a></td>
-                       </tr>
-                       <tr>
-                           <td><a href="#">22R</a></td>
-                           <td><a href="#">10.09(토)</a></td>
-                           <td><a href="#">VS 시흥시민</a></td>
-                           <td><a href="#">15:00</a></td>
-                           <td><a href="#">원주종합</a></td>
-                       </tr>
-                       <tr>
-                           <td><a href="#">27R</a></td>
-                           <td><a href="#">10.16(토)</a></td>
-                           <td><a href="#">VS 고양시민</a></td>
-                           <td><a href="#">15:00</a></td>
-                           <td><a href="#">동해웰빙</a></td>
-                       </tr>
-                   </tbody>
-               </table>
-           </a></li>
-           <li><a href="#">
-               <h4>강원FC에서 알려드립니다</h4>
-               <h2>코로나19 전수조사 관련 안내</h2>
-               <p>강원FC는 자가격리 해제 전 시행한<br>선수단 코로나19 전수조사에서<br>
-            선수, 코칭지원스태프, 관련 직원 모두 음성 판정을 받았습니다 <br><br>
-        선수단은 오늘 9/3(금) 12시 격리 해제 후 <br>오후에 정상 훈련을 진행합니다<br>
-    구단은 앞으로 클럽하우스 및 개인 방역 강화에 더욱 힘쓰겠습니다</p>
-    <img src="images/vs2.png" alt="">
-           </a></li>
-           <li>
-             <a href="#">
-               <h2>PLAYER RANKING</h2>
-               <h3>선수별 랭킹</h3>
-               <ul>
-                <li><img src="images/player.png" alt=""></li>
-                <li><p> 5 GOAL 득점1위 고무열</p></li>
-                <li><img src="images/player.png" alt=""></li>
-                <li><p>3 ASSIST 도움1위 고무열</p></li>  
-               </ul>
-           </a>
-        </li>
-           <li><a href="#">
-            <h2>GANGWON FC NOTICE</h2>
-            <h2>공지사항</h2>
+        <img src="images/gangneun.png" alt="">
+        <img src="images/resort.png" alt="">
+        <img src="images/yanggu.png" alt="">
+    </div>
+</div>
+<div class="feedContain">
+    <div class="feeds">
+        <h3>GANGWON FC FEEDS</h3><br>
+        <p>강원FC 소식을 확인하세요!</p>
+        <ul>
+            <li>
+                <img src="images/a 1.png" alt="">
+                <span>전체</span>
+         </li>
+            <li>
+                <img src="images/bd 1.png" alt="">
+                <span>공지사항</span>
+             </li>
+            <li>
+                <img src="images/b 1.png" alt="">
+                <span>뉴스</span>
+             </li>
+            <li>
+                <img src="images/g 1.png" alt="">
+                <span>구단사진</span>
+             </li>
+            <li>
+                <img src="images/facebook 2.png" alt="">
+                <span>페이스북</span>
+             </li>
+            <li>
+                <img src="images/youtube 8.png" alt="">
+                <span>인스타그램</span>
+             </li>
+        </ul>
+    </div>
+    <div class="insta">
+        <ul>
+            <li>
+                <a href="#">
+                    <img src="images/Rectangle 23.png" alt="">
+                    <p>.이렇게 훈련이 재미있던 거였나?<br>당연함😝 매번 오던 곳도 설레게 만든... <br>#인스타그램</p>
+         </a>
+     </li>
+            <li>
+                <a href="#">
+                    <img src="images/Rectangle 24.png" alt="">
+                    <p>런닝하다 붙잡힌 골키퍼 완전체 ♀ #강원FC #골키퍼즈 #이범수 #권재범... <br>#인스타그램</p>
+                 </a></li>
+            <li>
+                <a href="#">
+                    <img src="images/Rectangle 26.png" alt="">
+                    <p>.9월 7일 푸른 하늘의 날은<br>우리나라의 제안으로 지정된 최초의 UN... <br>#인스타그램</p>
+                 </a>
+             </li>
+            <li>
+                <a href="#">
+                    <img src="images/Rectangle 27.png" alt="">
+                    <p>#HBD_강원 오늘은 고무열 선수의 생일입니다🎉 (무)열의 날 (열)렬히... <br>#인스타그램</p>
+                 </a>
+             </li>
+            <li>
+                <a href="#">
+                    <img src="images/Rectangle 28.png" alt="">
+                    <p>.일동후디스 하이뮨과 함께하는 랜선 팬사인회✍🎊9/8(수) 김동현... <br>#인스타그램</p>
+                 </a>
+                 </li>
+            <li>
+                <a href="#">
+                    <img src="images/Rectangle 30.png" alt="">
+                    <p>.📢 #강원FC K리그 주니어 경기 결과 <br>🐣강원FC U15 3:1 FC... <br>#인스타그램</p>
+                 </a>
+             </li>
+        </ul>
+    </div>
+</div>
+<div class="noticeWrap">
+    <h3>공지사항</h3>
+</div>
+<div class="article">
+    <ul>
+        <li><a href="#">
+            <h2>K4리그 일정 변경 관련 공지사항</h2>
+            <p>코로나19확진 등으로 인해 경기 일정이 변경되었습니다</p>
             <table>
                 <tbody>
                     <tr>
-                        <td>
-                            <div class="txt">강원FC 엠블럼 공모전 안내</div>
-                            <div class="num">2021.08.30</div>
-                        </td>
+                        <td><a href="#">23R</a></td>
+                        <td><a href="#">09.11(토)</a></td>
+                        <td><a href="#">VS 충주시민</a></td>
+                        <td><a href="#">14:00</a></td>
+                        <td><a href="#">충주종합</a></td>
                     </tr>
                     <tr>
-                        <td>
-                            <div class="txt">코로나19 확진에 따른 경기 일정 관련 안내</div>
-                            <div class="num">2021.08.23</div>
-                        </td>
+                        <td><a href="#">24R</a></td>
+                        <td><a href="#">09.19(일)</a></td>
+                        <td><a href="#">VS 포천시민</a></td>
+                        <td><a href="#">15:00</a></td>
+                        <td><a href="#">원주종합</a></td>
                     </tr>
                     <tr>
-                        <td>
-                            <div class="txt">강원FC 선수단 코로나19 확진 관련 공지...</div>
-                            <div class="num">2021.08.20</div>
-                        </td>
+                        <td><a href="#">20R</a></td>
+                        <td><a href="#">09.22(수)</a></td>
+                        <td><a href="#">VS 인천남동</a></td>
+                        <td><a href="#">15:00</a></td>
+                        <td><a href="#">남동근린체육</a></td>
                     </tr>
                     <tr>
-                        <td>
-                            <div class="txt">제1회 강원FC배 동호인 축구대회 안내</div>
-                            <div class="num">2021.06.17</div>
-                        </td>
+                        <td><a href="#">25R</a></td>
+                        <td><a href="#">09.25(토)</a></td>
+                        <td><a href="#">VS 진주시민</a></td>
+                        <td><a href="#">15:00</a></td>
+                        <td><a href="#">원주종합</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="#">26R</a></td>
+                        <td><a href="#">10.02(토)</a></td>
+                        <td><a href="#">VS 당진시민</a></td>
+                        <td><a href="#">15:00</a></td>
+                        <td><a href="#">당진종합</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="#">22R</a></td>
+                        <td><a href="#">10.09(토)</a></td>
+                        <td><a href="#">VS 시흥시민</a></td>
+                        <td><a href="#">15:00</a></td>
+                        <td><a href="#">원주종합</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="#">27R</a></td>
+                        <td><a href="#">10.16(토)</a></td>
+                        <td><a href="#">VS 고양시민</a></td>
+                        <td><a href="#">15:00</a></td>
+                        <td><a href="#">동해웰빙</a></td>
                     </tr>
                 </tbody>
             </table>
-           </a>
-        </li>
-       </ul>
-   </div>
-   <footer id="footer">
-       <div class="topMenu">
-           <ul class="footmenu clearfix">
-               <li><a href="#">개인정보처리방침</a></li>
-               <li><a href="#">이용약관</a></li>
-               <li><a href="#">사이트맵</a></li>
-           </ul>
-       </div>
-       <div class="container">
-           <ul>
-               <li><img src="images/footerlogo.png" alt=""></li>
-               <li>
-                   <p>춘천 사무국:강원 춘천시 스포츠타운길 124 1층 강원FC사무국 TEL 033-254-2854 FAX 033-252-2854 <br>
-                    강릉 사무국: 강원 강릉시 남부로 222 강남축구공원 내 강원FC사무국 TEL 033-655-6652/033-655-6653 FAX 033-655-6660 <br>
-                    대표이사:이영표 사업자등록번호:221-81-31526 통신판매신고:2013-강원강릉-0026 사업자정보확인 메일주소:gangwonfc@gangwon-fc.com 호스팅사업자:(주)덕스포츠<br>
-                    COPYRIGHT 2020 ⓒGANGWON FC ALL RIGHTS RESERVED.
-                   </p>
-                </li>
-           </ul>
-       </div>
-   </footer> -->
+        </a></li>
+        <li><a href="#">
+            <h4>강원FC에서 알려드립니다</h4>
+            <h2>코로나19 전수조사 관련 안내</h2>
+            <p>강원FC는 자가격리 해제 전 시행한<br>선수단 코로나19 전수조사에서<br>
+         선수, 코칭지원스태프, 관련 직원 모두 음성 판정을 받았습니다 <br><br>
+     선수단은 오늘 9/3(금) 12시 격리 해제 후 <br>오후에 정상 훈련을 진행합니다<br>
+ 구단은 앞으로 클럽하우스 및 개인 방역 강화에 더욱 힘쓰겠습니다</p>
+ <img src="images/vs2.png" alt="">
+        </a></li>
+        <li>
+          <a href="#">
+            <h2>PLAYER RANKING</h2>
+            <h3>선수별 랭킹</h3>
+            <ul>
+             <li>
+                 <img src="images/player.png" alt="">
+                 <p> 5 GOAL 득점1위 고무열</p>
+             </li>
+             <li>
+                 <img src="images/player.png" alt="">
+                 <p>3 ASSIST 도움1위 고무열</p>
+            </li>
+            </ul>
+        </a>
+     </li>
+        <li><a href="#">
+         <h2>GANGWON FC NOTICE</h2>
+         <h2>공지사항</h2>
+         <table>
+             <tbody>
+                 <tr>
+                     <td>
+                         <div class="txt">강원FC 엠블럼 공모전 안내</div>
+                         <div class="num">2021.08.30</div>
+                     </td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <div class="txt">코로나19 확진에 따른 경기 일정 관련 안내</div>
+                         <div class="num">2021.08.23</div>
+                     </td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <div class="txt">강원FC 선수단 코로나19 확진 관련 공지...</div>
+                         <div class="num">2021.08.20</div>
+                     </td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <div class="txt">제1회 강원FC배 동호인 축구대회 안내</div>
+                         <div class="num">2021.06.17</div>
+                     </td>
+                 </tr>
+             </tbody>
+         </table>
+        </a>
+     </li>
+    </ul>
+    <footer id="footer">
+        <div class="topMenu">
+            <ul class="footmenu clearfix">
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">이용약관</a></li>
+                <li><a href="#">사이트맵</a></li>
+            </ul>
+        </div>
+        <div class="container">
+            <ul class="clearfix">
+                <li><img src="images/footerlogo.png" alt=""></li>
+                <li>
+                    <p>춘천 사무국:강원 춘천시 스포츠타운길 124 1층 강원FC사무국 TEL 033-254-2854 FAX 033-252-2854 <br>
+                     강릉 사무국: 강원 강릉시 남부로 222 강남축구공원 내 강원FC사무국 TEL 033-655-6652/033-655-6653 FAX 033-655-6660 <br>
+                     대표이사:이영표 사업자등록번호:221-81-31526 통신판매신고:2013-강원강릉-0026 사업자정보확인 메일주소:gangwonfc@gangwon-fc.com 호스팅사업자:(주)덕스포츠<br>
+                     COPYRIGHT 2020 ⓒGANGWON FC ALL RIGHTS RESERVED.
+                    </p>
+                 </li>
+            </ul>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
