--- a/06/index.html
+++ b/06/index.html
@@ -15,6 +15,8 @@
             --gradient-color:linear-gradient(90deg,#4455cc,#854fee);
             --box-shadow: 0 0 15px rgba(0,0,0,0.5)
         }
+        li{list-style: none;}
+        ul {padding: 0;}
         .headerWrap {transition: 0.3s;}
         .headerWrap .nav-item{font-size: 1.2em; border-bottom: 4px solid transparent;padding: 0 10px;transition: 0.3s;}
         .headerWrap .nav-item:hover {border-bottom: 4px solid var(--primary-color2);}
@@ -31,6 +33,13 @@
           }
         .service .card img {height: 200px;}
     
+        .portfolio {background: var(--bg-color1);}
+        .portfolio .row img {border-radius: 10px;}
+        .footer .icon li+li {margin-left: 20px;}
+        .footer .icon a {display: block;width: 40px;height: 40px;background: var(--bg-color1);text-align: center;
+        line-height: 35px;border-radius: 20px;}
+        .footer .icon a:hover {box-shadow: var(--box-shadow);}
+        .footer .icon img {width: 15px;}
         @media screen and (max-width:576px){
             .headerWrap .nav-item,.headerWrap .nav-item:hover{border-bottom: none;}
         }
@@ -98,7 +107,7 @@
       </div>
 
       <div class="service">
-          <div class="container py-5  px-5">
+          <div class="container py-5 px-5 px-0">
               <h2 class="text-center mb-5">gallery</h2>
               <div class="row">
                   <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
@@ -140,8 +149,78 @@
               </div>
           </div>
       </div>
+
+      <div class="portfolio">
+          <div class="container py-5">
+              <div class="btn-group mb-3">
+                  <button class="btn btn-primary" data-filter="*" id="btn1">all</button>
+                  <button class="btn btn-primary" data-filter=".web">WEBSITE</button>
+                  <button class="btn btn-primary" data-filter=".illust">ILLUST</button>
+                  <button class="btn btn-primary" data-filter=".photo">PHOTOSHOP</button>
+              </div>
+              <div class="row">
+                  <div class="col-6 col-lg-3 element-item web mb-3">
+                      <a href="servicos/1.jpg" class="popup_link"><img src="servicos/1.jpg" alt="" class="img-fluid"></a>
+                  </div>
+                  <div class="col-6 col-lg-3 element-item illust">
+                      <a href="servicos/2.jpg" class="popup_link"><img src="servicos/2.jpg" alt="" class="img-fluid"></a>
+                </div>
+                <div class="col-6 col-lg-3 element-item web">
+                    <a href="servicos/3.jpg" class="popup_link"><img src="servicos/3.jpg" alt="" class="img-fluid"></a>
+                </div>
+                <div class="col-6 col-lg-3 element-item photo">
+                    <a href="servicos/4.jpg" class="popup_link"><img src="servicos/4.jpg" alt="" class="img-fluid"></a>
+                </div>
+              </div>
+          </div>
+      </div>
+
+      <div class="customer mb-5">
+          <div class="container py-5">
+              <h2 class="text-center mb-3">CUSTOMER</h2>
+              <div class="row">
+                  <div class="owl-carousel owl-theme">
+                     <div class="item d-flex p-4 bg-danger text-white">
+                         <img src="user.svg" alt="" class="img-fluid" style="width: 150px;">
+                         <div class="ml-4">
+                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, numquam.</p>
+                             <p><img src="quote.svg" alt="" class="ml-auto" style="width: 35px;"></p>
+                         </div>
+                     </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+      <div class="footer bg-light">
+          <div class="container py-5">
+              <div class="row">
+                  <div class="col-md-6 text-center text-md-left mb-5">
+                      <img src="logo.svg" alt="" class="img-fluid">
+                    </div>
+                  <div class="col-md-6 mb-5 mb-md-0">
+                      <ul class="icon d-flex justify-content-center justify-content-md-end">
+                          <li><a href="#!"><img src="facebook.svg" alt=""></a></li>
+                          <li><a href="#!"><img src="twitter.svg" alt=""></a></li>
+                          <li><a href="#!"><img src="instagram.svg" alt=""></a></li>
+                          <li><a href="#!"><img src="linkedin.svg" alt=""></a></li>
+                          <li><a href="#!"><img src="youtube.svg" alt=""></a></li>
+                      </ul>
+                  </div>
+              </div>
+              <div class="text-center mb-5 pt-3" style="border-top: 1px solid #ccc;">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, nihil.
+              </div>
+          </div>
+      </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <script>
         $(window).scroll(function(){
             let scrollY = $(window).scrollTop();
@@ -151,6 +230,38 @@
                 $(".headerWrap").removeClass("fixed-top")
             }
         });
+
+        const btns = $(".portfolio .btn-group .btn");
+
+        btns.click(function(){
+            let i = $(this).index()
+
+            btn.removeClass("active");
+            btn.eq(i).addClass("active");
+
+            let selector = btns.eq(i).attr("data-filter");
+            console.log(selector)
+
+            $(".portfolio .row").isotope({
+                fliter:selector
+            })
+        })
+        window.onload = function(){
+            $(".portfolio .btn-group #btn1").trigger("click");
+        }
+        $(".portfolio .row .popup_link").magnificPopup({type:"image"})
+        $(".customer .owl-carousel").owlCarousel({
+            loop:true,
+            margin:10,
+            responsive:{
+                0:{
+                    items:1
+                },
+                768:{
+                    items:2
+                }
+            }
+        })
     </script>
   </body>
 </html>
