--- a/06company/index.html
+++ b/06company/index.html
@@ -38,6 +38,7 @@
         .footer .icon li+li {margin-left: 20px;}
         .footer .icon a {display: block;width: 40px;height: 40px;background: var(--bg-color1);text-align: center;
         line-height: 35px;border-radius: 20px;}
+        .customer .item {border-radius: 5px;}
         .footer .icon a:hover {box-shadow: var(--box-shadow);}
         .footer .icon img {width: 15px;}
         @media screen and (max-width:576px){
@@ -180,11 +181,11 @@
               <h2 class="text-center mb-3">CUSTOMER</h2>
               <div class="row">
                   <div class="owl-carousel owl-theme">
-                     <div class="item d-flex p-4 bg-danger text-white">
-                         <img src="user.svg" alt="" class="img-fluid" style="width: 150px;">
-                         <div class="ml-4">
+                     <div class="item d-flex p-4 bg-danger text-white flex-lg-column">
+                         <img src="user.svg" alt="" class="img-fluid d-block m-auto" style="width: 150px;">
+                         <div class="ml-4 ml-lg-0">
                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, numquam.</p>
-                             <p><img src="quote.svg" alt="" class="ml-auto" style="width: 35px;"></p>
+                             <p class="d-lg-none"><img src="quote.svg" alt="" class="ml-auto" style="width: 35px;"></p>
                          </div>
                      </div>
                   </div>
@@ -231,6 +232,7 @@
             }
         });
 
+        //isotope
         const btns = $(".portfolio .btn-group .btn");
 
         btns.click(function(){
@@ -246,10 +248,14 @@
                 fliter:selector
             })
         })
+        //isotope load
         window.onload = function(){
             $(".portfolio .btn-group #btn1").trigger("click");
         }
+        //light box - modal
         $(".portfolio .row .popup_link").magnificPopup({type:"image"})
+
+        //slider
         $(".customer .owl-carousel").owlCarousel({
             loop:true,
             margin:10,
@@ -257,7 +263,7 @@
                 0:{
                     items:1
                 },
-                768:{
+                992:{
                     items:2
                 }
             }
