--- a/04company/index.html
+++ b/04company/index.html
@@ -21,7 +21,7 @@
                <ul class="mainMenu clearfix">
                    <li class="mainLi"><a href="#">강원FC</a>
                        <ul class="subMenu">
-                           <li class="subLi"><a href="#">구단소개</a></li>
+                           <li class="subLi"><a href="sub1.html">구단소개</a></li>
                            <li class="subLi"><a href="#">유니폼</a></li>
                            <li class="subLi"><a href="#">클럽하우스</a></li>
                            <li class="subLi"><a href="#">자유게시판</a></li>
