--- a/04company/index_boot.html
+++ b/04company/index_boot.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/css_boot.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.0.9/swiper-bundle.css" integrity="sha512-WDdCafHbATE4+4590Fk0qPbO6O2MfG/60dN+MM8LmB00SeBmy9VWD0UN/qlZIrmCHGrewcdffueVXuuTcDo0Wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>company</title>
   </head>
   <body>
-      <header id="headerWrap" class="mb-3 mb-lg-5">
-              <div class="container my-5" style="width: 100%; background: #000;height: 50px;">
-                  <nav class="navbar navbar-expand-sm navbar-light bg-light">
-                      <a class="navbar-brand" href="#"><img src="images/vs2.png" alt="" style="width: 50px;"></a>
+      <header id="headerWrap" class="mb-3 mb-lg-5 bg-dark">
+              <div class="container my-2">
+                  <nav class="navbar navbar-expand-sm navbar-dark">
+                    <a class="navbar-brand" href="#"><img src="images/vs2.png" alt="" style="width: 60px;"></a>
                       <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                           aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
@@ -46,16 +48,35 @@
 
 
       <div class="slider mb-5">
-        <div class="container pg-primary">111
+        <div class="container pg-primary">
             <div class="row">
                 <div class="swiper-container swiper col-md-10 offset-md-1">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">1</div>
-                        <div class="swiper-slide">1</div>
-                        <div class="swiper-slide">1</div>
-                        <div class="swiper-slide">1</div>
-                        <div class="swiper-slide">1</div>
-                    </div>
+                        <div class="swiper-wrapper">
+                            <!-- 01 -->
+                            <div class="swiper-slide">
+                              <div class="text-center">
+                                  <h2>GREAT UNION</h2>
+                                </div>
+                              <img src="images/visual.png">
+                            </div>
+                            <!-- 01 -->
+                            <!-- 02 -->
+                            <div class="swiper-slide">
+                                <div class="text-center">
+                                    <h2>GREAT UNION</h2>
+                                  </div>
+                                <img src="images/visual01.png">
+                            </div>
+                            <!-- 02 -->
+                            <!-- 03 -->
+                              <div class="swiper-slide">
+                                <div class="text-center">
+                                    <h2>GREAT UNION</h2>
+                                  </div>
+                                <img src="images/visual02.png">
+                              </div>
+                              <!-- 03 -->
+                          </div> <!--swiper-wrapper-->
                 </div>
                 <div class="swiper-next d-none d-md-block"></div>
                 <div class="swiper-prev d-none d-md-block"></div>
@@ -63,6 +84,24 @@
         </div>
     </div>
 
+    <div class="content mb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-3 col-lg">
+                    <ul class="clearfix">
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li>4</li>
+                        <li>5</li>
+                        <li>6</li>
+                        <li>7</li>
+                        <li>8</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.0.9/swiper-bundle.min.js" integrity="sha512-bPNHwutl0bNsjHtw+AtR2xvp0BLtpm9mN6LcqzDZifcQSYv/dPVvND245WZVst+m7GhYHX647RoaL9w6VVraxw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
