--- a/04company/index_boot.html
+++ b/04company/index_boot.html
@@ -47,7 +47,7 @@
       </header>
 
 
-      <div class="slider mb-5">
+      <div class="slider">
         <div class="container pg-primary">
             <div class="row">
                 <div class="swiper-container swiper col-md-10 offset-md-1">
@@ -87,10 +87,28 @@
     <div class="content mb-5">
         <div class="container">
             <div class="row">
-                <div class="col-3 col-lg">
-                    <ul class="clearfix">
-                        <li>1</li>
-                        <li>2</li>
+                <div class="col-md-12">
+                    <ul style="width: 1200px;">
+                        <li class="main">
+                            <div class="txt text-center">
+                                <h6>NEXT HOME MATCH</h6>
+                            </div>
+                            <div class="match d-flex justify-content-around">
+                                <img src="images/vs1.png" alt="">
+                                vs
+                                <img src="images/vs2.png" alt="">
+                            </div>
+                            <div class="team d-flex justify-content-around">
+                                <p>강원</p>
+                                <p>수원</p>
+                            </div>
+                            <h6 class="text-center">
+                                09월 18일(토) 19:00<br>강릉
+                            </h6>
+                        </li>
+                        <li>
+                        2
+                       </li>
                         <li>3</li>
                         <li>4</li>
                         <li>5</li>
