--- a/04company/index_boot.html
+++ b/04company/index_boot.html
@@ -106,15 +106,53 @@
                                 09월 18일(토) 19:00<br>강릉
                             </h6>
                         </li>
-                        <li>
-                        2
+                        <li class="main bg-primary">
+                        <div class="txt text-center">
+                            <h6>QUICK LINK</h6>
+                        </div>
+                        <ul class="link clearfix">
+                            <li class="up">
+                                <img src="images/money.png" alt="">
+                                <p>티켓</p>
+                            </li>
+                            <li class="up">
+                                <img src="images/directions_bus.png" alt="">
+                                <p>버스</p>
+                            </li>
+                            <li class="up">
+                                <img src="images/thumb_up.png" alt="">
+                                <p>스폰서</p>
+                            </li>
+                            <li class="up">
+                                <img src="images/vs2.png" alt="" style="width: 50px">
+                                <p>엠블런</p>
+                            </li>
+                        </ul>
+                        <ul class="link clearfix">
+                            <li class="down">
+                                <img src="images/shopping_cart.png" alt="">
+                                <p>쇼핑몰</p>
+                            </li>
+                            <li class="down">
+                                <img src="images/sponJU.png" alt="" style="width: 50px;">
+                                <p>주주</p>
+                            </li>
+                            <li class="down">
+                                <img src="images/public.png" alt="">
+                                <p>사회공헌</p>
+                            </li>
+                            <li class="down">
+                                <img src="images/mascote.png" alt="">
+                                <p>마스코트</p>
+                            </li>
+                        </ul>
                        </li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li>5</li>
-                        <li>6</li>
-                        <li>7</li>
-                        <li>8</li>
+                        <li class="main">3</li>
+                        <li class="main">4</li>
+                        <li class="main">5</li>
+                        <li class="main">6</li>
+                        <li class="main">7</li>
+                        <li class="main">8</li>
                     </ul>
                 </div>
             </div>
