--- a/04company/index_boot.html
+++ b/04company/index_boot.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/css_boot.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.0.9/swiper-bundle.css" integrity="sha512-WDdCafHbATE4+4590Fk0qPbO6O2MfG/60dN+MM8LmB00SeBmy9VWD0UN/qlZIrmCHGrewcdffueVXuuTcDo0Wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <title>company</title>
   </head>
   <body>
@@ -88,8 +90,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <ul style="width: 1200px;">
-                        <li class="main">
+                    <ul style="width: 1200px;" class="a row">
+                        <li class="main col-md-3 col-sm-6">
                             <div class="txt text-center">
                                 <h6>NEXT HOME MATCH</h6>
                             </div>
@@ -147,12 +149,47 @@
                             </li>
                         </ul>
                        </li>
-                        <li class="main">3</li>
-                        <li class="main">4</li>
-                        <li class="main">5</li>
-                        <li class="main">6</li>
-                        <li class="main">7</li>
-                        <li class="main">8</li>
+                        <li class="main">
+                            <h2>GREAT</h2>
+                            <img src="images/vs2.png" alt="">
+                            <h2>union</h2>
+                        </li>
+                        <li class="main">
+                            <h4>GANGWON FC CSR</h4>
+                            <p>강웅이와 함께 으라차차</p>
+                            <a href="#">MORE</a>
+                        </li>
+                        <li class="main">
+                            <h4>GANGWON FC STOCK</h4>
+                            <p>강원FC 주주확인</p>
+                            <a href="#">MORE</a>
+                        </li>
+                        <li class="main">
+                            <img src="images/play.png" alt="">
+                        </li>
+                        <li class="main">
+                            <h4 class="text-center">강원FC 스폰서</h4>
+                            <div class="spn1 d-flex">
+                                <img src="images/chun.png" alt="">
+                                <img src="images/gangneun.png" alt="">
+                            </div>
+                            <div class="spn2 d-flex">
+                                <img src="images/gangwon.png" alt="">
+                                <img src="images/resort.png" alt="">
+                                <img src="images/yanggu.png" alt="">
+                            </div>
+                        </li>
+                        <li class="main">
+                            <h4>강원FC 소식을 확인하세요</h4>
+                            <div class="feedlink d-flex justify-content-around">
+                                <img src="images/a 1.png" alt="">
+                                <img src="images/bd 1.png" alt="">
+                                <img src="images/b 1.png" alt="">
+                                <img src="images/g 1.png" alt="">
+                                <img src="images/facebook 2.png" alt="">
+                                <img src="images/youtube 8.png" alt="">
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
