--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -9,11 +9,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.0.9/swiper-bundle.css" integrity="sha512-WDdCafHbATE4+4590Fk0qPbO6O2MfG/60dN+MM8LmB00SeBmy9VWD0UN/qlZIrmCHGrewcdffueVXuuTcDo0Wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/reset.css">
+  <style>
+      .swiper-slide {position: relative;}
+      .swiper-slide .txt {
+          position: absolute; width: 200px; top: 50%; right: 30px; 
+          transform: translate(0,-50%);
+          border: 3px solid rgb(213, 199, 8); color: rgb(0, 0, 0); font-size: 15px; background: rgb(255, 255, 255);}
+      .swiper-slide .txt a {font-size: 12px;background: rgb(250, 213, 0);padding: 5px 10px;}
+      .best-sell {transform: translateX(10%);}
+      .best-sell .txt {padding: 20px;}
+      .best-sell .txt p {width: 500px;}
+      .best-sell .txt a {background: rgb(250, 213, 0);padding: 5px 10px;font-size: 12px;}
+  </style>
 </head>
 <body>
     <header id="headerWrap" class="mb-xl-0 mb-lg-5" >
         <div class="container px-3 px-md-0">
-            <nav class="navbar navbar-expand-md navbar-light bg-light px-0">
+            <nav class="navbar navbar-expand-md navbar-light px-0">
                 <a class="navbar-brand" href="index.html"><img src="images/logo.PNG" alt=""></a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -36,29 +48,84 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">고객지원</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">매장찾기</a>
+                        </li>
                     </ul>
                 </div>
-            </nav>
-            
+            </nav>     
         </div>
     </header>
-    <div class="slider mb-5">
+    <div class="slider mb-2">
         <div class="container">
-            <div class="swiper-container swiper col-md-10 offset-md-1">
-                <div class="slide">
-                    <h2 class="text-center">2021 홀리데이 매직 컬렉션</h2>
-                    <p class="text-center">프로방스 요정들의 여정을 따라 만들어진 마법 같은 2021 리미티드 홀리데이 에디션</p>
-                    <a href="#">자세히 보기</a>
-                    <img src="images/Untitled-1.png" alt="">
+            <div class="row">
+                <div class="swiper-container swiper col-md-10 offset-md-1">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="txt">
+                                <h4 class="text-center">2021 홀리데이 매직 컬렉션</h4>
+                                <p class="text-center">프로방스 요정들의 여정을 따라 만들어진 마법 같은 2021 리미티드 홀리데이 에디션</p>
+                                <a href="#">자세히 보기</a>
+                            </div>
+                            <div class="cover"></div>
+                            <img src="images/Untitled-1.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="txt">
+                                <h4 class="text-center">록시땅 스테이전시</h4>
+                                <p class="text-center">반복된 일상에 지친 몸과 마음을 리셋 시켜줄 록시땅 스테이 전시를 만나보세요.</p>
+                                <a href="#">자세히 보기</a>
+                            </div>
+                            <div class="cover"></div>
+                            <img src="images/net1 (33).jpg" alt="" class="img-fluid">
+                        </div>
+                    </div>
                 </div>
-                <div class="slide">
-                    <h2 class="text-center">록시땅 스테이전시</h2>
-                    <p class="text-center">반복된 일상에 지친 몸과 마음을 리셋 시켜줄 록시땅 스테이 전시를 만나보세요.</p>
-                    <a href="#">자세히 보기</a>
-                    <img src="images/net1 (33).jpg" alt="">
+                <div class="swiper-next d-none d-md-block"></div>
+                <div class="swiper-prev d-none d-md-block"></div>
+            </div>
+        </div>
+    </div>
+    <div class="best-sell">
+        <div class="container">
+            <h5 class="text-left">베스트 셀러</h5>
+            <div class="row">
+                <div class="col-md-10 d-flex">
+                    <img src="images/bestsell.png" alt="" width="200px">
+                    <div class="txt">
+                        <div class="t1">
+                            <h6 class="text-center">NEW 이모르뗄 리셋 세럼</h6>
+                            <p>10배 더 농축된 이모르뗄 에센셜 오일을 담은 NEW 리셋 세럼은 강력한 *항산화 효과로 피부 에너지 회복을 도와줍니다.</p>
+                            <h6>*해당 원료 인비트로 테스트 결과</h6>
+                            <a href="#">구매하기</a>
+                        </div>
+                        <div class="t2">
+                            <h5>NEW 이모르뗄 오버나이트 리셋 오일 인 세럼 50ml</h5>
+                            <p>￦123,000</p>
+                            <img src="images/image 4.png" alt="">
+                            <a href="#">구매하기</a>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.0.9/swiper-bundle.min.js" integrity="sha512-bPNHwutl0bNsjHtw+AtR2xvp0BLtpm9mN6LcqzDZifcQSYv/dPVvND245WZVst+m7GhYHX647RoaL9w6VVraxw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script>
+        const swiper = new Swiper('.swiper-container', {
+            loop: true,
+            slidesPerView:1,
+
+            navigation: {
+                nextEl: '.swiper-next',
+                prevEl: '.swiper-prev'
+            }
+        });
+    </script>
+
 </body>
 </html> 
